<resources>
    <string name="app_name">Touch Wake</string>
    <string name="tab_main">Main</string>
    <string name="tab_wake">Wake</string>
    <string name="tab_advanced">Advanced</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="label_kernel">Kernel Information</string>
    <string name="not_support">Warning! Make sure it gets root access and kernel support.</string>
    <string name="none">Can\'t get information</string>
    <string name="label_wake">Wake Options</string>
    <string name="label_advanced">Advanced Options</string>
    <string name="label_dtw">Double Tap To Wake</string>
    <string name="desc_dtw">wake device with touching screen twice (fast)</string>
    <string name="label_stw">Sweep To Wake</string>
    <string name="desc_stw">wake device with sweeping screen (left to right)</string>
    <string name="label_feather">Feather Value</string>
    <string name="desc_feather">the bound between the two taps (in pixels)</string>
    <string name="label_timeout">Timeout Value</string>
    <string name="desc_timeout">the max. duration between the two taps (in ms)</string>
    <string name="label_pressure">Pressure Value</string>
    <string name="desc_pressure">the min. touch pressure to access dt2w-s2w</string>
    <string name="label_set">Set Value</string>
    <string name="label_zero">0</string>
    <string name="label_titikdua">:</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="visit">Visit</string>
    <string name="close">Close</string>
    <string name="about">This application is used to enable or disable the dt2w and s2w feature.</string>
    <string name="website">http://harimurti.net</string>
    <string name="img_btn">Setting</string>
    <string name="toast_dtw">Turn %s : DoubleTap to Wake</string>
    <string name="toast_stw">Turn %s : Sweep to Wake</string>
</resources>
